# ground-truth-cli-rust

./: .gitignore  Cargo.toml  README.md
rules/: ground_truth_rules.toon  rust.toon  typescript.toon
src/: main.rs  rules.rs  scanner.rs
