[package]
name = "ground-truth-cli-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ignore = "0.4"

[dev-dependencies]
tempfile = "3.17"
